# rules_vivado

./: .gitignore  404.html  BUILD.bazel  MODULE.bazel  README.md  index.html  print.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  toolchains.html  version.bzl  vivado_bitstream.html  vivado_implementation.html  vivado_ip.html  vivado_project.html  vivado_providers.html  vivado_simulation.html  vivado_synthesis.html  vivado_toolchain.html
.github/workflows/: ci.yml  release.yaml  release_prep.sh
docs/src/: index.md  toolchains.md
examples/: .bazelrc  MODULE.bazel
examples/hello/: BUILD.bazel  hello.sv
examples/tools/vivado/: BUILD.bazel  vivado.sh
tests/: BUILD.bazel  README.md  assert_detection_tb.sv  bram_read_only_if.sv  bram_read_write_splitter.sv  bram_read_write_splitter_wrapper.sv  bram_write_only_if.sv  error_detection_tb.sv  expect_xsim_failure.sh  interface_example.tcl  interface_example_top.sv  stream_fifo.sv  stream_fifo_if.sv  stream_fifo_tb.sv  test_reader.sv  test_writer.sv  transition.bzl  weights_replay.sv  weights_replay_and_save_tb.sv  weights_replay_test.cc  weights_replay_top.sv
tests/toolchains/: BUILD.bazel  vivado_2024_1.sh  vivado_2025_1.sh  xilinx_env.sh  xilinx_env_2025_1.sh
vivado/: BUILD.bazel  bitstream.bzl  defs.bzl  flow.bzl  implementation.bzl  ip.bzl  project.bzl  providers.bzl  simulation.bzl  synthesis.bzl  toolchain.bzl
vivado/constraints/version/: BUILD.bazel
vivado/private/: BUILD.bazel  abstraction_definition.xml.template  bus_definition.xml.template  common.bzl  create_interface_ip.tcl.template  create_project.tcl.template  generate_interface_xml.py  interface_setup.tcl.template  parse_sv_interface.py  resource_set.bzl  versions.bzl  vivado.sh  xilinx_keyfile.txt  xsim_test.tcl.template
vivado/tests/: BUILD  BUILD.bazel
