# Copyright 2023 bazel_rules_hdl Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load(
    "//vivado:defs.bzl",
    "vivado_create_interface_ip",
    "vivado_create_ip",
    "vivado_create_project",
    "vivado_flow",
    "vivado_interface_definition",
    "xsim_test",
)
load(":transition.bzl", "with_vivado_version")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//visibility:private"],
)

# The Vivado toolchain wired up in //tests/toolchains is registered via
# MODULE.bazel and resolved automatically by every vivado_* rule below.

test_suite(
    name = "all_xsim_tests",
    tags = ["manual"],
    tests = [
        ":assert_detection_expect_failure_test",
        ":error_detection_expect_failure_test",
        ":stream_fifo_xsim_test",
        ":xsim_smoke_test",
    ],
)

verilog_library(
    name = "johnson_counter",
    srcs = [
        "johnson_counter.sv",
    ],
    data = [
        "test.mem",
    ],
)

verilator_cc_library(
    name = "johnson_counter_verilator",
    module = ":johnson_counter",
    module_top = "johnson_counter",
)

cc_test(
    name = "johnson_counter_test",
    srcs = ["johnson_counter_test.cc"],
    deps = [
        ":johnson_counter_verilator",
        "@googletest//:gtest_main",
    ],
)

verilog_library(
    name = "xsim_smoke_tb",
    srcs = ["xsim_smoke_tb.sv"],
)

xsim_test(
    name = "xsim_smoke_test",
    module = ":xsim_smoke_tb",
    module_top = "xsim_smoke_tb",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    with_waveform = True,
)

verilog_library(
    name = "johnson_counter_top",
    srcs = [
        "johnson_counter_top.sv",
    ],
    data = [
        "io_constraints.xdc",
        "zcu111_gpio.tcl",
    ],
    deps = [
        ":johnson_counter",
    ],
)

vivado_flow(
    name = "johnson_counter_vivado",
    module = ":johnson_counter_top",
    module_top = "johnson_counter_top",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

vivado_create_project(
    name = "johnson_counter_project",
    module = ":johnson_counter_top",
    module_top = "johnson_counter_top",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

write_file(
    name = "test_mem",
    out = "test.mem",
    content = [
        "00",
        "05",
        "0A",
        "0F",
        "14",
        "19",
        "1E",
        "28",
        "",
    ],
    newline = "unix",
)

verilog_library(
    name = "weights_replay",
    srcs = [
        "weights_replay.sv",
    ],
    data = [
        "test.mem",
    ],
)

verilator_cc_library(
    name = "weights_replay_verilator",
    module = ":weights_replay",
    module_top = "weights_replay",
    vopts = ["-D__VERILATOR__"],
)

cc_test(
    name = "weights_replay_test",
    srcs = ["weights_replay_test.cc"],
    data = [
        "test.mem",
    ],
    deps = [
        ":weights_replay_verilator",
        "@googletest//:gtest_main",
    ],
)

verilog_library(
    name = "weights_replay_top",
    srcs = [
        "weights_replay_top.sv",
    ],
    data = [
        "zcu111_weights.tcl",
    ],
)

vivado_create_ip(
    name = "weights_replay_ip",
    encrypt = True,
    ip_library = "test",
    ip_vendor = "test_vendor",
    ip_version = "0.1",
    module = ":weights_replay",
    module_top = "weights_replay",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

vivado_flow(
    name = "weights_replay_vivado",
    ip_blocks = [
        ":weights_replay_ip",
    ],
    module = ":weights_replay_top",
    module_top = "weights_replay_top",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

vivado_create_project(
    name = "weights_replay_project",
    ip_blocks = [
        ":weights_replay_ip",
    ],
    module = ":weights_replay_top",
    module_top = "weights_replay_top",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

verilog_library(
    name = "weights_ram",
    srcs = [
        "weights_ram.sv",
    ],
)

vivado_create_ip(
    name = "weights_ram_ip",
    encrypt = False,
    ip_library = "test",
    ip_vendor = "test_vendor",
    ip_version = "0.1",
    module = ":weights_ram",
    module_top = "weights_ram",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

verilog_library(
    name = "weights_replay_and_save_bd",
    data = [
        "weights_replay_and_save_bd.tcl",
    ],
)

vivado_create_ip(
    name = "weights_replay_and_save_ip",
    ip_blocks = [
        ":weights_replay_ip",
        ":weights_ram_ip",
    ],
    ip_library = "test",
    ip_vendor = "test_vendor",
    ip_version = "0.1",
    module = ":weights_replay_and_save_bd",
    module_top = "weights_replay_and_save",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

verilog_library(
    name = "weights_replay_and_save_tb",
    srcs = [
        "weights_replay_and_save_tb.sv",
    ],
)

xsim_test(
    name = "weights_replay_and_save_xsim",
    ip_blocks = [
        ":weights_replay_and_save_ip",
    ],
    module = ":weights_replay_and_save_tb",
    module_top = "weights_replay_and_save_tb",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

verilog_library(
    name = "weights_replay_and_save_wrapper",
    srcs = [
        "weights_replay_and_save_wrapper.sv",
    ],
)

vivado_create_project(
    name = "weights_replay_and_save_project",
    ip_blocks = [
        ":weights_replay_and_save_ip",
    ],
    module = ":weights_replay_and_save_wrapper",
    module_top = "weights_replay_and_save_wrapper",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

# Stream FIFO interface example - demonstrates vivado_interface_definition rule
# This generates the IP-XACT XML files and TCL setup script
vivado_interface_definition(
    name = "stream_fifo_interface",
    src = "stream_fifo_if.sv",
    interface_name = "stream_fifo_if",
    library = "interfaces",
    vendor = "test_vendor",
    version = "1.0",
)

# The interface verilog source with IP-XACT files as data
# The TCL setup file is automatically sourced by vivado rules
verilog_library(
    name = "stream_fifo_if",
    srcs = ["stream_fifo_if.sv"],
    data = [":stream_fifo_interface"],
)

# Convenience target for IP packaging (no srcs, just brings in deps + data)
verilog_library(
    name = "stream_fifo_if_ip_src",
    data = [":stream_fifo_interface"],
    deps = [":stream_fifo_if"],
)

# Module that uses the interface
verilog_library(
    name = "stream_fifo",
    srcs = ["stream_fifo.sv"],
    deps = [":stream_fifo_if"],
)

# Testbench
verilog_library(
    name = "stream_fifo_tb",
    srcs = ["stream_fifo_tb.sv"],
    deps = [":stream_fifo"],
)

# xsim test - interface IP files are included via verilog_library data
xsim_test(
    name = "stream_fifo_xsim_test",
    module = ":stream_fifo_tb",
    module_top = "stream_fifo_tb",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

# ============================================================================
# Error detection verification tests
# These tests verify that $error, assertions, etc. cause test failure
# ============================================================================

verilog_library(
    name = "error_detection_tb",
    srcs = ["error_detection_tb.sv"],
)

# This xsim_test is expected to FAIL (uses $error)
xsim_test(
    name = "error_detection_xsim",
    module = ":error_detection_tb",
    module_top = "error_detection_tb",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

verilog_library(
    name = "assert_detection_tb",
    srcs = ["assert_detection_tb.sv"],
)

# This xsim_test is expected to FAIL (assertion failure)
xsim_test(
    name = "assert_detection_xsim",
    module = ":assert_detection_tb",
    module_top = "assert_detection_tb",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
)

# Expect-failure wrapper tests - these PASS when the underlying xsim test FAILs
sh_test(
    name = "error_detection_expect_failure_test",
    srcs = ["expect_xsim_failure.sh"],
    args = ["$(location :error_detection_xsim)"],
    data = [":error_detection_xsim"],
    tags = ["manual"],
)

sh_test(
    name = "assert_detection_expect_failure_test",
    srcs = ["expect_xsim_failure.sh"],
    args = ["$(location :assert_detection_xsim)"],
    data = [":assert_detection_xsim"],
    tags = ["manual"],
)

# ============================================================================
# BRAM Read/Write Splitter - separate read and write interfaces for BRAM.
# Every rule below is `target_compatible_with` `//vivado/settings:version_2025.1`
# (via the _REQUIRES_VIVADO_2025_1 select) and tagged manual, so they don't get
# picked up by `//...` on their own. Build them through the `:all_bram_2025_1`
# wrapper at the bottom of this file, which uses `with_vivado_version` to
# transition the version flag + exec platform for the whole group in one shot.
# ============================================================================

_REQUIRES_VIVADO_2025_1 = ["//vivado/constraints/version:2025.1"]

# Read-only BRAM interface definition (IP-XACT)
vivado_interface_definition(
    name = "bram_read_only_interface",
    src = "bram_read_only_if.sv",
    description = "Read-only BRAM interface with address, enable, data, and valid",
    interface_name = "bram_read_only_if",
    library = "interfaces",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
    vendor = "test_vendor",
    version = "1.0",
)

# Write-only BRAM interface definition (IP-XACT)
vivado_interface_definition(
    name = "bram_write_only_interface",
    src = "bram_write_only_if.sv",
    description = "Write-only BRAM interface with address, enable, byte-write-enable, and data",
    interface_name = "bram_write_only_if",
    library = "interfaces",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
    vendor = "test_vendor",
    version = "1.0",
)

# Interface SV sources with IP-XACT data
verilog_library(
    name = "bram_read_only_if",
    srcs = ["bram_read_only_if.sv"],
    data = [":bram_read_only_interface"],
)

verilog_library(
    name = "bram_write_only_if",
    srcs = ["bram_write_only_if.sv"],
    data = [":bram_write_only_interface"],
)

# Splitter module
verilog_library(
    name = "bram_read_write_splitter",
    srcs = ["bram_read_write_splitter.sv"],
    deps = [
        ":bram_read_only_if",
        ":bram_write_only_if",
    ],
)

# Interface IP packages (make custom interfaces available in Vivado IP catalog)
vivado_create_interface_ip(
    name = "bram_read_only_interface_ip",
    interface = ":bram_read_only_interface",
    module = ":bram_read_only_if",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
)

vivado_create_interface_ip(
    name = "bram_write_only_interface_ip",
    interface = ":bram_write_only_interface",
    module = ":bram_write_only_if",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
)

# IP wrapper with flat ports and X_INTERFACE directives
verilog_library(
    name = "bram_read_write_splitter_wrapper",
    srcs = ["bram_read_write_splitter_wrapper.sv"],
    deps = [":bram_read_write_splitter"],
)

# Packaged IP block
vivado_create_ip(
    name = "bram_read_write_splitter_ip",
    ip_blocks = [
        ":bram_read_only_interface_ip",
        ":bram_write_only_interface_ip",
    ],
    ip_library = "ip",
    ip_vendor = "test_vendor",
    ip_version = "1.0",
    module = ":bram_read_write_splitter_wrapper",
    module_top = "bram_read_write_splitter_wrapper",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
)

# ============================================================================
# Test reader/writer IP blocks and interface example project
# ============================================================================

# Test reader - drives bram_read_only_if with sequential reads
verilog_library(
    name = "test_reader",
    srcs = ["test_reader.sv"],
    data = [":bram_read_only_interface"],
)

vivado_create_ip(
    name = "test_reader_ip",
    ip_blocks = [":bram_read_only_interface_ip"],
    ip_library = "ip",
    ip_vendor = "test_vendor",
    ip_version = "1.0",
    module = ":test_reader",
    module_top = "test_reader",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
)

# Test writer - drives bram_write_only_if with sequential writes
verilog_library(
    name = "test_writer",
    srcs = ["test_writer.sv"],
    data = [":bram_write_only_interface"],
)

vivado_create_ip(
    name = "test_writer_ip",
    ip_blocks = [":bram_write_only_interface_ip"],
    ip_library = "ip",
    ip_vendor = "test_vendor",
    ip_version = "1.0",
    module = ":test_writer",
    module_top = "test_writer",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
)

# Interface example project top level
verilog_library(
    name = "interface_example_top",
    srcs = ["interface_example_top.sv"],
    data = ["interface_example.tcl"],
)

vivado_create_project(
    name = "interface_example_project",
    ip_blocks = [
        ":bram_read_only_interface_ip",
        ":bram_write_only_interface_ip",
        ":bram_read_write_splitter_ip",
        ":test_reader_ip",
        ":test_writer_ip",
    ],
    module = ":interface_example_top",
    module_top = "interface_example_top",
    part_number = "xczu28dr-ffvg1517-2-e",
    tags = ["manual"],
    target_compatible_with = _REQUIRES_VIVADO_2025_1,
)

# ============================================================================
# Top-level aggregator that transitions all 2025.1-only targets in one go.
# Tagged `manual` so `bazel build //...` (e.g. on CI without a Vivado install)
# skips it — its underlying targets are vivado-action heavy and would fail in
# an env without vivado 2025.1. Build explicitly when you do have it:
#   bazel build //tests:all_bram_2025_1
# ============================================================================

with_vivado_version(
    name = "all_bram_2025_1",
    tags = ["manual"],
    targets = [
        ":bram_read_only_interface_ip",
        ":bram_write_only_interface_ip",
        ":bram_read_write_splitter_ip",
        ":test_reader_ip",
        ":test_writer_ip",
        ":interface_example_project",
    ],
    vivado_version = "2025.1",
)
